# BEDO-ERP

./: .dockerignore  .env.example  .env.railway.example  .env.vercel.example  .gitattributes  .gitignore  README.md  docker-compose.yml  railway.toml
apps/bedo_erp/: MANIFEST.in  README.md  license.txt  pyproject.toml
apps/bedo_erp/bedo_erp/: hooks.py  modules.txt  patches.txt
apps/bedo_erp/bedo_erp/audit/: api.py  services.py
apps/bedo_erp/bedo_erp/config/: desktop.py  docs.py
apps/bedo_erp/bedo_erp/fixtures/: role.json  workspace.json
apps/bedo_erp/bedo_erp/identity/: api.py  ldap_service.py  services.py  session_service.py  validators.py
apps/bedo_erp/bedo_erp/patches/: seed_phase_1_data.py
apps/bedo_erp/bedo_erp/security/: api.py  policies.py  services.py
apps/bedo_erp/bedo_erp/shared/: constants.py  exceptions.py  response.py
apps/bedo_erp/bedo_erp/users/: api.py  permission_service.py  role_service.py  services.py
apps/bedo_erp/bedo_erp/www/: home.html  home.py
apps/bedo_platform/: MANIFEST.in  README.md  license.txt  pyproject.toml
apps/bedo_platform/bedo_platform/: constants.py  hooks.py  modules.txt  patches.txt  permissions.py
apps/bedo_platform/bedo_platform/api/: auth.py  profile.py  routing.py  user_management.py  web.py
apps/bedo_platform/bedo_platform/config/: desktop.py
apps/bedo_platform/bedo_platform/patches/: __init__.py  backfill_approval_departments.py  ensure_ard_roles_and_permissions.py  ensure_srs_electronics_capability_role.py  reactivate_ard_and_command_center_seed_users.py
docs/: security_model.md  team_split.md
(+401 files in other folders)
