[project]
name = "bedo_erp"
authors = [
  { name = "BEDO", email = "admin@example.local" }
]
description = "BEDO ERP Phase 1 authentication and administration foundation"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "frappe>=15.0.0,<16.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
