[project]
name = "bedo_platform"
authors = [
  { name = "BEDO", email = "admin@bedo.local" }
]
description = "BEDO Frappe platform foundation with database-backed authentication and department dashboards"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "frappe>=15.0.0,<16.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
